# advarchs

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  pyproject.toml
advarchs/: __init__.py  advarchs.py  handlers.py  utils.py
tests/: Dockerfile.alpine  Dockerfile.centos  __init__.py  test_advarchs.py  test_rars.json  test_tars.json  test_utils.py  test_zips.json
tests/fixtures/: __init__.py
