[tool.poetry]
name = "advarchs"
version = "0.1.0"
description = ""
authors = ["elessarelfstone <elessarelfstone@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
rarfile = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
